Fix gradient text spacing

--- a/app.scss
+++ b/app.scss
@@ -39,7 +39,6 @@
   font-family: "Inter", sans-serif;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
-  margin-right: 0.5rem;
 }
 
 .smaller__gradient {
